Settings page spacing fix

--- a/css/settings.css
+++ b/css/settings.css
@@ -3,8 +3,8 @@ body {
 }
 body .container {
     background-color: white;
-    margin: 3%;
-    width: 94%;
+    margin-top: 3%;
+    margin-bottom: 3%;
     padding: 2%;
     border: 15px solid white;
     border-radius: 15px;
